[package]
name = "openttd"
version = "0.1.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
description = "Models and parsers for OpenTTD network protocol"
repository = "https://github.com/rust-game-parsers/openttd"
keywords = [
    "game",
    "games",
    "openttd",
]
license = "Apache"
edition = "2018"

[dependencies]
byteorder = "1"
chrono = "0.4"
failure = "0.1"
maplit = "1"
nom = "5"

[dev-dependencies]
hex-literal = "*"
